--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <style>
+      .body {
+        min-width: 300px;
+        padding: 15px;
+      }
      .type-container {
        /* width: 300px; */
        display: flex;
@@ -15,41 +19,7 @@
 
     </style>
   </head>
-  <body>
-    <div class="type-container">
-      <div class="type-item">
-        <input type="radio" id="type-basic" name="type" value="basic">
-        <label for="type-basic">Basic</label>
-      </div>
-
-      <div class="type-item">
-        <input type="radio" id="type-normal" name="type" value="normal" checked>
-        <label for="type-normal">Normal</label>
-      </div>
-
-      <div class="type-item">
-        <input type="radio" id="type-advanced" name="type" value="advanced">
-        <label for="type-advanced">Advanced</label>
-      </div>
-    </div>
-
-    <div class="options-container">
-      <div class="options-item">
-        <input type="checkbox" id="option-notes" name="option" value="notes">
-        <label for="type-normal">Notes</label>
-      </div>
-
-      <div class="options-item">
-        <input type="checkbox" id="option-scenario" name="option" value="scenario">
-        <label for="type-normal">Scenario</label>
-      </div>
-
-      <div class="options-item">
-        <input type="checkbox" id="option-regression-scenario" name="option" value="regression-scenario">
-        <label for="type-normal">Regression Scenario</label>
-      </div>
-    </div>
-
+  <body class="body">
     <div>
       <button id="add-description">Add description</button>
     </div>
