--- a/popup.html
+++ b/popup.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      .body {
-        min-width: 300px;
-        padding: 15px;
-      }
-     .type-container {
-       /* width: 300px; */
-       display: flex;
-     }
-
-     .type-item {
-       margin: 0 8px;
-       display: flex;
-       align-items: center;
-     }
-
-     .btn {
-      order: none;
-      border: 0;
-      outline: none;
-      margin-right: 4px;
-      height: 32px;
-      min-width: 24px;
-      border-radius: 3px;
-      text-shadow: none;
-      line-height: 32px;
-      padding: 0 10px;
-      font-size: 14px;
-      color: #fff;
-      background: #0052cc;
-      cursor: pointer;
-      transition: background .1s ease-out,box-shadow .15s cubic-bezier(.47,.03,.49,1.38);
-     }
-
-     .btn:hover {
-      background-color: #0065ff;
-     }
-
-    </style>
+    <link rel="stylesheet" href="popup.css">
   </head>
+
   <body class="body">
+    <div class="type-container">
+      <div class="type-item">
+        <input type="radio" id="type-basic" name="type" value="basic">
+        <label for="type-basic">Basic</label>
+      </div>
+
+      <div class="type-item">
+        <input type="radio" id="type-normal" name="type" value="normal" checked>
+        <label for="type-normal">Normal</label>
+      </div>
+
+      <div class="type-item">
+        <input type="radio" id="type-advanced" name="type" value="advanced">
+        <label for="type-advanced">Advanced</label>
+      </div>
+    </div>
+
+    <div class="options-container">
+      <div class="options-item">
+        <input type="checkbox" id="option-notes" name="option" value="notes">
+        <label for="type-normal">Notes</label>
+      </div>
+
+      <div class="options-item">
+        <input type="checkbox" id="option-scenario" name="option" value="scenario">
+        <label for="type-normal">Scenario</label>
+      </div>
+
+      <div class="options-item">
+        <input type="checkbox" id="option-regression-scenario" name="option" value="regression-scenario">
+        <label for="type-normal">Regression Scenario</label>
+      </div>
+    </div>
+
+
     <div>
       <button id="add-description" class="btn">
         Add description
