--- a/popup.html
+++ b/popup.html
@@ -24,18 +24,23 @@
 
     <div class="options-container">
       <div class="options-item">
-        <input type="checkbox" id="option-notes" name="option" value="notes">
+        <input type="checkbox" id="option-notes" checked name="option" value="notes">
         <label for="type-normal">Notes</label>
       </div>
 
       <div class="options-item">
-        <input type="checkbox" id="option-scenario" name="option" value="scenario">
+        <input type="checkbox" id="option-scenario" checked name="option" value="scenario">
         <label for="type-normal">Scenario</label>
       </div>
 
       <div class="options-item">
-        <input type="checkbox" id="option-regression-scenario" name="option" value="regression-scenario">
-        <label for="type-normal">Regression Scenario</label>
+        <input type="checkbox" id="option-regression" checked name="option" value="regression">
+        <label for="type-normal">Regression</label>
+      </div>
+
+      <div class="options-item">
+        <input type="checkbox" id="option-todo" name="option" checked value="regression-todo">
+        <label for="type-normal">Add todo</label>
       </div>
     </div>
 
