--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="options-item">
-        <input type="checkbox" id="option-todo" name="option" checked value="regression-todo">
+        <input type="checkbox" id="option-todo" name="option" checked value="todo">
         <label for="type-normal">Add todo</label>
       </div>
     </div>
