--- a/popup.html
+++ b/popup.html
@@ -42,6 +42,26 @@
         <input type="checkbox" id="option-todo" name="option" checked value="todo">
         <label for="type-normal">Add todo</label>
       </div>
+
+      <div class="options-item">
+        <input type="checkbox" id="option-todo" name="option" checked value="responsive">
+        <label for="type-normal">Responsive design</label>
+      </div>
+
+      <div class="options-item">
+        <input type="checkbox" id="option-todo" name="option" checked value="accessibility">
+        <label for="type-normal">Accessibility</label>
+      </div>
+
+      <div class="options-item">
+        <input type="checkbox" id="option-todo" name="option" checked value="cross-browser">
+        <label for="type-normal">Cross browser</label>
+      </div>
+
+      <div class="options-item">
+        <input type="checkbox" id="option-todo" name="option" checked value="tests">
+        <label for="type-normal">Tests</label>
+      </div>
     </div>
 
 
