Add functionality to radio buttons

--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,8 @@
       </div>
 
       <div class="type-item">
-        <input type="radio" id="type-normal" name="type" value="normal" checked>
-        <label for="type-normal">Normal</label>
+        <input type="radio" id="type-standard" name="type" value="standard" checked>
+        <label for="type-standard">Standard</label>
       </div>
 
       <div class="type-item">
