Fix labels values

--- a/popup.html
+++ b/popup.html
@@ -25,42 +25,47 @@
     <div class="options-container">
       <div class="options-item">
         <input type="checkbox" id="option-notes" checked name="option" value="notes">
-        <label for="type-normal">Notes</label>
+        <label for="option-notes">Notes for testers</label>
       </div>
 
       <div class="options-item">
         <input type="checkbox" id="option-scenario" checked name="option" value="scenario">
-        <label for="type-normal">Scenario</label>
+        <label for="option-scenario">Scenario</label>
       </div>
 
       <div class="options-item">
         <input type="checkbox" id="option-regression" checked name="option" value="regression">
-        <label for="type-normal">Regression</label>
+        <label for="option-regression">Regression</label>
       </div>
 
       <div class="options-item">
         <input type="checkbox" id="option-todo" name="option" checked value="todo">
-        <label for="type-normal">Add todo</label>
+        <label for="option-todo">Add todo</label>
       </div>
 
       <div class="options-item">
-        <input type="checkbox" id="option-todo" name="option" checked value="responsive">
-        <label for="type-normal">Responsive design</label>
+        <input type="checkbox" id="option-responsive" name="option" checked value="responsive">
+        <label for="option-responsive">Responsive design</label>
       </div>
 
       <div class="options-item">
-        <input type="checkbox" id="option-todo" name="option" checked value="accessibility">
-        <label for="type-normal">Accessibility</label>
+        <input type="checkbox" id="option-accessibility" name="option" checked value="accessibility">
+        <label for="option-accessibility">Accessibility</label>
       </div>
 
       <div class="options-item">
-        <input type="checkbox" id="option-todo" name="option" checked value="cross-browser">
-        <label for="type-normal">Cross browser</label>
+        <input type="checkbox" id="option-cross-browser" name="option" checked value="cross-browser">
+        <label for="option-cross-browser">Cross browser</label>
       </div>
 
       <div class="options-item">
-        <input type="checkbox" id="option-todo" name="option" checked value="tests">
-        <label for="type-normal">Tests</label>
+        <input type="checkbox" id="option-tests" name="option" checked value="tests">
+        <label for="option-tests">Tests</label>
+      </div>
+
+      <div class="options-item">
+        <input type="checkbox" id="option-edge-cases" name="option" checked value="edge-cases">
+        <label for="option-edge-cases">Edge cases</label>
       </div>
     </div>
 
