--- a/popup.html
+++ b/popup.html
@@ -43,34 +43,36 @@
         <label for="option-todo">Add todo</label>
       </div>
 
-      <div class="options-item">
-        <input type="checkbox" id="option-responsive" name="option" checked value="responsive">
-        <label for="option-responsive">Responsive design</label>
-      </div>
+      <div class="sub-options">
+        <div class="options-item">
+          <input type="checkbox" id="option-responsive" name="option" checked value="responsive">
+          <label for="option-responsive">Responsive design</label>
+        </div>
 
-      <div class="options-item">
-        <input type="checkbox" id="option-accessibility" name="option" checked value="accessibility">
-        <label for="option-accessibility">Accessibility</label>
-      </div>
+        <div class="options-item">
+          <input type="checkbox" id="option-accessibility" name="option" checked value="accessibility">
+          <label for="option-accessibility">Accessibility</label>
+        </div>
 
-      <div class="options-item">
-        <input type="checkbox" id="option-cross-browser" name="option" checked value="cross-browser">
-        <label for="option-cross-browser">Cross browser</label>
-      </div>
+        <div class="options-item">
+          <input type="checkbox" id="option-cross-browser" name="option" checked value="cross-browser">
+          <label for="option-cross-browser">Cross browser</label>
+        </div>
 
-      <div class="options-item">
-        <input type="checkbox" id="option-tests" name="option" checked value="tests">
-        <label for="option-tests">Tests</label>
-      </div>
+        <div class="options-item">
+          <input type="checkbox" id="option-tests" name="option" checked value="tests">
+          <label for="option-tests">Tests</label>
+        </div>
 
-      <div class="options-item">
-        <input type="checkbox" id="option-edge-cases" name="option" checked value="edge-cases">
-        <label for="option-edge-cases">Edge cases</label>
+        <div class="options-item">
+          <input type="checkbox" id="option-edge-cases" name="option" checked value="edge-cases">
+          <label for="option-edge-cases">Edge cases</label>
+        </div>
       </div>
     </div>
 
 
-    <div>
+    <div class="button-container">
       <button id="add-description" class="btn">
         Add description
       </button>
