Add info about improvements

--- a/popup.html
+++ b/popup.html
@@ -68,6 +68,11 @@
           <input type="checkbox" id="option-edge-cases" name="option" checked value="edge-cases">
           <label for="option-edge-cases">Edge cases</label>
         </div>
+
+        <div class="options-item">
+          <input type="checkbox" id="option-improvements-epic" name="option" checked value="improvements-epic">
+          <label for="option-improvements-epic">Should update improvements epic</label>
+        </div>
       </div>
     </div>
 
