Add option for description for messages.ts

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -45,6 +45,11 @@
 
       <div class="sub-options">
         <div class="options-item">
+          <input type="checkbox" id="option-messages" name="option" checked value="messages">
+          <label for="option-messages">Add description for messages.ts</label>
+        </div>
+
+        <div class="options-item">
           <input type="checkbox" id="option-responsive" name="option" checked value="responsive">
           <label for="option-responsive">Responsive design</label>
         </div>
